test/corpus/lambda_expr.txt
==================================================
lambda without return type (regression guard)
==================================================

fn main() {
    var add = fn (a: int, b: int) { return a + b; };
}

---

(module
  (fn_decl
    name: (ident)
    params: (fn_params)
    body: (block
      (var_decl
        name: (ident)
        (initializer
          expr: (lambda_expr
            params: (fn_params
              param: (fn_param
                name: (ident)
                type: (type_ident
                  name: (ident)))
              param: (fn_param
                name: (ident)
                type: (type_ident
                  name: (ident))))
            body: (block
              (return_stmt
                (binary_expr
                  left: (ident)
                  right: (ident))))))))))

==================================================
lambda with simple return type
==================================================

fn main() {
    var add = fn (a: int, b: int): int { return a + b; };
}

---

(module
  (fn_decl
    name: (ident)
    params: (fn_params)
    body: (block
      (var_decl
        name: (ident)
        (initializer
          expr: (lambda_expr
            params: (fn_params
              param: (fn_param
                name: (ident)
                type: (type_ident
                  name: (ident)))
              param: (fn_param
                name: (ident)
                type: (type_ident
                  name: (ident))))
            return_type: (type_ident
              name: (ident))
            body: (block
              (return_stmt
                (binary_expr
                  left: (ident)
                  right: (ident))))))))))

==================================================
lambda with nullable generic return type
==================================================

fn main() {
    var f = fn (): Array<int>? { return null; };
}

---

(module
  (fn_decl
    name: (ident)
    params: (fn_params)
    body: (block
      (var_decl
        name: (ident)
        (initializer
          expr: (lambda_expr
            params: (fn_params)
            return_type: (type_ident
              name: (ident)
              params: (type_ident
                name: (ident))
              (optional))
            body: (block
              (return_stmt
                (null)))))))))

==================================================
lambda with return type passed as call argument
==================================================

fn main() {
    apply(fn (x: int): int { return x + 1; }, 41);
}

---

(module
  (fn_decl
    name: (ident)
    params: (fn_params)
    body: (block
      (expr_stmt
        (call_expr
          fn: (ident)
          (args
            (lambda_expr
              params: (fn_params
                param: (fn_param
                  name: (ident)
                  type: (type_ident
                    name: (ident))))
              return_type: (type_ident
                name: (ident))
              body: (block
                (return_stmt
                  (binary_expr
                    left: (ident)
                    right: (number
                      (number_int))))))
            (number
              (number_int))))))))
