test/corpus/modvar_initializer.txt
==================================================
modvar with bare type — canonical shape
==================================================

var x: int;

---

(module
  (modvar
    name: (ident)
    (type_decorator
      type: (type_ident
        name: (ident)))))

==================================================
modvar with initializer parses (semantically invalid, flagged downstream)
==================================================

var x: int = 42;

---

(module
  (modvar
    name: (ident)
    (type_decorator
      type: (type_ident
        name: (ident)))
    (initializer
      expr: (number
        (number_int)))))

==================================================
modvar with initializer doesn't ERROR-recover the next decl
==================================================

var x: int = 1;
fn next() {}

---

(module
  (modvar
    name: (ident)
    (type_decorator
      type: (type_ident
        name: (ident)))
    (initializer
      expr: (number
        (number_int))))
  (fn_decl
    name: (ident)
    params: (fn_params)
    body: (block)))

==================================================
modvar with no name parses (mid-edit `var ;`, flagged downstream)
==================================================

var;
fn next() {}

---

(module
  (modvar)
  (fn_decl
    name: (ident)
    params: (fn_params)
    body: (block)))

==================================================
modvar with name but no type_decorator parses (semantically invalid, flagged downstream)
==================================================

var x;
fn next() {}

---

(module
  (modvar
    name: (ident))
  (fn_decl
    name: (ident)
    params: (fn_params)
    body: (block)))

==================================================
modvar with name + initializer but no type_decorator parses
==================================================

var x = 1;
fn next() {}

---

(module
  (modvar
    name: (ident)
    (initializer
      expr: (number
        (number_int))))
  (fn_decl
    name: (ident)
    params: (fn_params)
    body: (block)))
