test/corpus/top_level_expr.txt
==================================================
Bare expression at module scope parses as `mod_stmt > expr_stmt`
==================================================

foo();

---

(module
  (mod_stmt
    (expr_stmt
      (call_expr
        fn: (ident)
        (args)))))

==================================================
Bare expression with no trailing `;` parses (auto-semi)
==================================================

foo()

---

(module
  (mod_stmt
    (expr_stmt
      (call_expr
        fn: (ident)
        (args)))))

==================================================
Top-level expression doesn't ERROR-recover the following decl
==================================================

foo();
fn next() {}

---

(module
  (mod_stmt
    (expr_stmt
      (call_expr
        fn: (ident)
        (args))))
  (fn_decl
    name: (ident)
    params: (fn_params)
    body: (block)))

==================================================
Multi-line top-level expression
==================================================

1 + 2;
"hello";

---

(module
  (mod_stmt
    (expr_stmt
      (binary_expr
        left: (number
          (number_int))
        right: (number
          (number_int)))))
  (mod_stmt
    (expr_stmt
      (string
        (string_fragment)))))

==================================================
Top-level expression after a real decl still parses
==================================================

type T {}
foo();

---

(module
  (type_decl
    name: (ident)
    body: (type_body))
  (mod_stmt
    (expr_stmt
      (call_expr
        fn: (ident)
        (args)))))

==================================================
Top-level `if` statement parses via mod_stmt
==================================================

if (cond) { foo(); }

---

(module
  (mod_stmt
    (if_stmt
      condition: (ident)
      then_branch: (block
        (expr_stmt
          (call_expr
            fn: (ident)
            (args)))))))

==================================================
Top-level `while` loop parses via mod_stmt
==================================================

while (cond) { foo(); }

---

(module
  (mod_stmt
    (while_stmt
      condition: (ident)
      block: (block
        (expr_stmt
          (call_expr
            fn: (ident)
            (args)))))))

==================================================
Top-level `return` parses via mod_stmt
==================================================

return;

---

(module
  (mod_stmt
    (return_stmt)))
